<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <androidx.core.widget.NestedScrollView

        android:id="@+id/scrollViewParameter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/age"
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etAge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/age_measure_unit"
                android:inputType="number"
                >

            </EditText>

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvAnaemia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/anaemia"
                android:textSize="@dimen/textsize_large"

            >

            </TextView>



            <RadioGroup
                android:id="@+id/rgAnaemia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/rbAnemiaNegative"


                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_3xlarge"
                    android:checked="true"
                    android:onClick="onClickCheckAnaemia"

                    android:text="@string/no"

                    android:textSize="@dimen/textsize_xlarge"

                    android:layout_marginRight="@dimen/margin_3xlarge" />

                <RadioButton
                    android:id="@+id/rbAnemiaPositive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickCheckAnaemia"

                    android:text="@string/yes"
                    android:textSize="20sp"

               />

            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCreatinine_phosphokinase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/creatinine_phosphokinase"
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etCreatininePhosphokinase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/creatinine_phosphokinase_measure_unit"
                android:inputType="number"
                >

            </EditText>

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvDiabetes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/diabetes"
                android:textSize="@dimen/textsize_large"

                >

            </TextView>



            <RadioGroup
                android:id="@+id/rgDiabetes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/rbDiabetesNegative"


                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_3xlarge"
                    android:checked="true"
                    android:onClick="onClickCheckDiabetes"
                    android:text="@string/no"
                    android:textSize="@dimen/textsize_xlarge"
                    android:layout_marginRight="@dimen/margin_3xlarge" />

                <RadioButton
                    android:id="@+id/rbDiabetesPositive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickCheckDiabetes"
                    android:text="@string/yes"
                    android:textSize="20sp"

                    />
            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEjectionFraction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ejection_fraction"
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etEjectionFraction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/ejection_fraction_measure_unit"
                android:inputType="number"
                >

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvHighBloodPressure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/high_blood_pressure"
                android:textSize="@dimen/textsize_large"

                >

            </TextView>



            <RadioGroup
                android:id="@+id/rgHighBloodPressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/rbHighBloodPressureNegative"


                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_3xlarge"
                    android:checked="true"
                    android:onClick="onClickCheckHighBloodPressure"
                    android:text="@string/no"
                    android:textSize="@dimen/textsize_xlarge"
                    android:layout_marginRight="@dimen/margin_3xlarge" />

                <RadioButton
                    android:id="@+id/rbHighBloodPressurePositive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickCheckHighBloodPressure"
                    android:text="@string/yes"
                    android:textSize="20sp"

                    />
            </RadioGroup>
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlatelets"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/platelets"
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etPlatelets"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/platelets_measure_unit"
                android:inputType="numberDecimal"
                >

            </EditText>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSerumCreatinine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/serum_creatinine"
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etSerumCreatinine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/serum_creatinine_measure_unit"
                android:inputType="numberDecimal"
                >

            </EditText>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSerumSodium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/serum_sodium"
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etSerumSodium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/serum_sodium_measure_unit"
                android:inputType="number"
                >

            </EditText>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvSex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/sex"
                android:textSize="@dimen/textsize_large"

                >

            </TextView>



            <RadioGroup
                android:id="@+id/rgSex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/rbSexFemale"


                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_3xlarge"
                    android:checked="true"
                    android:onClick="onClickCheckSex"


                    android:text="@string/sex_female"

                    android:textSize="@dimen/textsize_xlarge"
                    android:layout_marginRight="@dimen/margin_3xlarge" />

                <RadioButton
                    android:id="@+id/rbSexMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickCheckSex"
                    android:text="@string/sex_male"
                    android:textSize="20sp"

                    />
            </RadioGroup>
        </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvSmoking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/smoking"
                android:textSize="@dimen/textsize_large"

                >

            </TextView>



            <RadioGroup
                android:id="@+id/rgSmoking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/rbSmokingNegative"


                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_3xlarge"
                    android:checked="true"
                    android:onClick="onClickCheckSmoking"
                    android:text="@string/no"

                    android:textSize="@dimen/textsize_xlarge"
                    android:layout_marginRight="@dimen/margin_3xlarge" />

                <RadioButton
                    android:id="@+id/rbSmokingPositive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickCheckSmoking"
                    android:text="@string/yes"
                    android:textSize="20sp"
                    />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnConfirmData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_data"
        android:textSize="@dimen/textsize_xlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>




</androidx.constraintlayout.widget.ConstraintLayout>